# decision-engine

./: README.md  de_feedback.json  pyproject.toml
decision_engine/: __init__.py  api.py  cli.py  engine.py  feedback.py  io.py  types.py
decision_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: conflicting_constraints.json  duplicate_ids.json  purchase_laptop.json
static/: index.html
tests/: test_failure_scenarios.py  test_smoke.py
